--- a/meson.build
+++ b/meson.build
@@ -5,8 +5,6 @@ project('nett', 'cpp',
                       'cpp_args=-Wall -Wextra -Wpedantic -Wshadow'],
     meson_version: '>=1.0.0')
 
-glob = import('glob')
-
 vcpkg = find_program('vcpkg', required : true)
 run_command(vcpkg, 'install', '--x-wait-for-lock',
                               '--x-manifest-root=' + meson.current_source_dir())
@@ -15,5 +13,5 @@ fmt_dep = dependency('fmt')
 
 subdir('src')
 
-exe = executable('nett', sources,
+executable('nett', sources,
   dependencies: [fmt_dep])
